# coding_exercise

./: README.md  how-to.md
botsandus_localization/: CMakeLists.txt  cmds.txt  package.xml
botsandus_localization/launch/: mapping.launch
botsandus_localization/maps/: world_map.pgm  world_map.yaml
botsandus_localization/rviz/: mapping.rviz
botsandus_navigation/: CMakeLists.txt  package.xml
botsandus_navigation/config/: bup_local_planner_params_burger.yaml
botsandus_navigation/launch/: amcl.launch  move_base.launch  turtlebot3_navigation.launch
botsandus_navigation/rviz/: navigation.rviz
botsandus_planner/: CMakeLists.txt  bup_plugin.xml  package.xml
botsandus_planner/include/botsandus_planner/: botsandus_planner.h  botsandus_planner_ros.h  bup_utils.h  costmap_model.h  footprint_helper.h  line_iterator.h  map_cell.h  map_grid.h  planar_laser_scan.h  trajectory.h  trajectory_inc.h  world_model.h
botsandus_planner/src/: botsandus_planner.cpp  botsandus_planner_ros.cpp  costmap_model.cpp  footprint_helper.cpp  map_cell.cpp  map_grid.cpp  trajectory.cpp
botsandus_planner/src/test/: utest.cpp
path_tracker/: CMakeLists.txt  package.xml
path_tracker/include/path_tracker/: path_tracker.h  utils.h
path_tracker/launch/: track_nav.launch
path_tracker/src/: path_tracker.cpp  path_tracker.cpp.autosave  path_tracker_node.cpp
path_tracker/src/test/: utest.cpp
