<?xml version="1.0"?>
<package format="2">
  <name>botsandus_localization</name>
  <version>0.0.0</version>
  <description>The botsandus_localization package</description>

  <maintainer email="ephson@todo.todo">ephson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
