<?xml version="1.0"?>
<package format="2">
  <name>botsandus_planner</name>
  <version>0.0.0</version>
  <description>The botsandus_planner package is a local planner for
               generating velocities for the mobile base</description>

  <maintainer email="ephson@todo.todo">ephson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>


  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>



  <export>
    <nav_core plugin="${prefix}/bup_plugin.xml"/>
  </export>
</package>
